fix two clicks necessary to load image in profile view. shift everything to the left 20px

--- a/css/plae-chef.css
+++ b/css/plae-chef.css
@@ -107,9 +107,9 @@ md-button{
 #plae-size {
     height: 472px;
     margin-top: 50px;
-    left: 248px;
+    left: 208px;
     z-index: 0;
-    width: 200px;
+    width: 220px;
     position: absolute;
     border: 1px solid #D3D3D3;
     background-color: #f6f6f6;
@@ -148,9 +148,9 @@ select {
     #plae-basket {
         height: 472px;
         margin-top: 50px;
-        left: 1064px;
+        left: 1044px;
         z-index: 50;
-        width: 200px;
+        width: 220px;
         position: absolute;
         border: 1px solid #D3D3D3;
         background-color: #f6f6f6;
@@ -167,7 +167,7 @@ select {
     font-size: 12px;
 }
 .plae.basket.item{
-    width: 80%;
+    width: 85%;
 }
 .plae.basket.item.shoe {
     position: absolute;
@@ -277,7 +277,7 @@ button#edit {
 .delete {
     float: right !important;
     position: absolute !important;
-    right: -30px;
+    right: -25px;
     top: 10px;
 }
 
@@ -296,7 +296,7 @@ button#edit {
       opacity: 1;
       display: inline-block;
       margin-bottom: 10px;
-      margin-left: 440px;
+      margin-left: 420px;
         top: 470px;
         border-radius: 5px;
         -webkit-border-radius: 5px;
@@ -343,7 +343,7 @@ button#edit {
         opacity: 1;
         display: inline-block;
         margin-bottom: 10px;
-        margin-left: 450px;
+        margin-left: 430px;
         top: 468px;
         background: #ffffff;
         box-shadow:inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.3);
@@ -373,10 +373,10 @@ button#edit {
 
     }
 
-    div#tabs_container{
+    #tabs_container{
         height: 200px;
         width: 1014px;
-        margin-left: 100px;
+        margin-left: 90px;
         position: relative;
         overflow: hidden;
 
@@ -386,7 +386,7 @@ button#edit {
           margin-top: -200px; */
 
         margin-bottom: 10px;
-        margin-left: 100px;
+        margin-left: 90px;
         height: 80px;
         position: relative;
         width: 1014px;
@@ -750,19 +750,19 @@ button#edit {
 button#left-profile-button {
     position: absolute;
     top: 940px;
-    left: 700px;
+    left: 680px;
 }
 
 button#top-button {
     position: absolute;
     top: 940px;
-    left: 740px;
+    left: 720px;
 }
 
 button#right-profile-button {
     position: absolute;
     top: 940px;
-    left: 780px;
+    left: 760px;
 }
 
 .view-button{
